Fixed search layout shift

--- a/_includes/styles/components/navbar.css
+++ b/_includes/styles/components/navbar.css
@@ -83,4 +83,14 @@
   --docsearch-searchbox-focus-background: var(--color-background-1);
   --docsearch-searchbox-shadow: inset 0 0 0 2px var(--color-foreground-1);
   align-self: center;
+  padding: 0;
+  margin: 0;
+  width: 172px;
+  height: 36px;
+}
+@media (max-width: 768px) {
+	.navbar-search {
+		width: auto;
+    height: auto;
+	}
 }
